Merge Multiple SubScenes into GUI Layout